# TradingSystem

./: CMakeLists.txt  README.md  start.sh
database/: stocks.txt
database/traders/: info.txt
database/traders/orders/: ID_1.txt  ID_2.txt  ID_3.txt  ID_4.txt  ID_5.txt
database/traders/stocks/: ID_1.txt  ID_2.txt  ID_3.txt  ID_4.txt  ID_5.txt
history/: transactions.txt
src/: Commands.cpp  Commands.hpp  Emulation.cpp  Emulation.hpp  LimitOrder.cpp  LimitOrder.hpp  MarketOrder.cpp  MarketOrder.hpp  Order.cpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  OrderType.hpp  Signals.cpp  Signals.hpp  Stock.cpp  Stock.hpp  System.cpp  System.hpp  Trader.cpp  Trader.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
